Revision history for Perl module Text::Autoformat

1.71_01 2015-06-06 NEILB
    - Switched to Dist::Zilla, dropping both Build.PL and Makefile.PL -- phew!

1.71 2015-05-04 NEILB
    - Previous release had a problem with PAUSE, caused by the two internal
      packages not having a $VERSION. Identified and reported as PAUSE
      issue GH#170 by KENTNL++. Added $VERSION to internal packages.

1.70 2015-05-01 NEILB
    - Removed useless loading of utf8 and Data::Dumper. RJBS++
    - Only renumber ASCII-digit lists, don't touch other \d things. RJBS++

1.69_01 2015-04-25 NEILB
    - This was a developer release containing the changes subsequently
      released in 1.70 (see above).

1.69 2015-02-15 NEILB
    - Changed the internal packages Hang and NullHang to
      Text::Autoformat::Hang and Text::Autoformat::NullHang respectively.

1.68 2015-02-15 NEILB
    - Was failing on input of an empty string RT#101994. Fix from DCONWAY.
      Apologies for the confusion caused by Damian and I both releasing,
      this release should straighten things up.
    - Fixed syntax errors in Quoting section of doc. DCONWAY++

1.67 2015-01-08 NEILB
    - Got co-maint from Damian so I could put the dist on github.
      Thanks Damian!
    - Reformatted this file as per CPAN::Changes::Spec
    - Added github repo to metadata and doc

1.669006 2014-10-03 DCONWAY
    - Improved 'quoter' option to allow augmenting quoter regex,
      rather than just replacing it (thanks Peter)

1.669005 2014-10-03 DCONWAY
    - Added Lisp-style leading ; as a quoter (thanks Roland)
    - Added 'quoter' option to allow user to specify a regex
      to be used to recognize quoters (thanks Peter)

1.669004 2013-07-31 DCONWAY
    - Tweaked widow handling to avoid a nasty edge case (thanks Michael!)

1.669003 2013-05-13 DCONWAY
    - Unknown changes

1.669002 2010-06-22 DCONWAY
    - Patched missing case in 'ignore' option handling (thanks Alan)

1.669001 2010-05-30 DCONWAY