@@ -1,10 +1,10 @@
-name    = Text-Autoformat
-author  = Damian Conway <damian@conway.org>
-license = Perl_5
+name             = Text-Autoformat
+author           = Damian Conway <damian@conway.org>
+license          = Perl_5
 copyright_holder = Damian Conway
 copyright_year   = 1997
-
-version = 1.71_01
+main_module      = lib/Text/Autoformat.pm
+version          = 1.71_01
 
 [@Basic]
 [PkgVersion]
